using UnityEngine;

public class AnimationString
{
    public static string isMoving = "IsMoving";
    public static string isDie = "IsDie";
    public static string dircetion = "Direction";   //   [0]Front, [1]Back, [2]Left, [3]Right 
    public static string attackTrigger = "AttackTrigger";
    public static string lockVelocity = "LockVelocity";
    public static string hitTrigger = "HitTrigger";
    public static string cantMove = "CantMove";
    public static string attackSpeed = "AttackSpeed";
}
